# halo

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  meson.build
cmake/: setup_name.hpp.in  version.hpp.in
examples/: CMakeLists.txt  hello_world.cpp
halo/: meson.build  version.hpp.in
include/halo/: export.hpp  halo.hpp
include/private/: no_leak.hpp
include/private/halo/private/: internal.h  no_leak.hpp
include/public/halo/: export.hpp  halo.hpp  main.hpp
src/: dllmain.cpp  halo.cpp  setup.cpp
